--- a/Content/Topics/Curves/Creating and maintaining curves.htm
+++ b/Content/Topics/Curves/Creating and maintaining curves.htm
@@ -5,7 +5,7 @@
         <h1>Creating and maintaining curves</h1>
         <p>Curves are generated using data that has been imported into the system. The data can also be imported as-is using the standard import mechanism. </p>
         <p>Curves are a representation of the available data and not the interface though which the data is applied. </p>
-        <p>Tags are used within the curves module as an attribute to help sort and categorize curves. They are distinctly different from the other forms of tags within the system. </p>
+        <p>Tags are used within the curves module as an attribute to help sort and categorize curves. They are very different from the other forms of tags within the system. </p>
         <h2>Interacting with curve values</h2>
         <p>Interaction with curve values in the curve detail section is limited to two actions: manipulation of the effective series and the build series values. </p>
         <p>
