--- a/Content/Topics/Release Notes/Allocation.htm
+++ b/Content/Topics/Release Notes/Allocation.htm
@@ -79,7 +79,7 @@ No forecast retrend generated. Could be not enough data points to generate a ret
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Finalizing Orders</td>
                     <td class="TableStyle-standard-BodyB-Column2-Body1">Good, Bad, Blocked</td>
-                    <td class="TableStyle-standard-BodyA-Column1-Body1">Check site priorities or prepack overage %.</td>
+                    <td class="TableStyle-standard-BodyA-Column1-Body1">Check site priorities or prepack overage percentage.</td>
                 </tr>
             </tbody>
         </table>
