--- a/Content/Topics/Release Notes/Assortment Planning.htm
+++ b/Content/Topics/Release Notes/Assortment Planning.htm
@@ -35,7 +35,7 @@ This means that the Smart Started <span class="Emphasis">AUR</span> value is not
             </li>
         </ul>
         <h2>Managing attribute-based sub-clusters across views</h2>
-        <p>Existing sub-clustering functionality allows users, via Cluster Sets view, to grade and cluster (ABC) store cluster sets based on sales performance and then sub-cluster by a site-specific Lookup attribute type (such as cold, hot, warm), including user defined attributes. The result is adjustments to phase periods based on site attributes. The sub-clustering functionality is now extended to the following:</p>
+        <p>Existing sub-clustering functionality allows users, via Cluster Sets view, to grade and cluster (ABC) store cluster sets based on sales performance and then sub-cluster by a site-specific Lookup attribute type (such as Cold, Hot, Warm), including user defined attributes. The result is adjustments to phase periods based on site attributes. The sub-clustering functionality is now extended to the following:</p>
         <ul>
             <li>
                 <p>Receipt Plan view</p>
