Schedules module content work

--- a/Content/Topics/Schedules/Application to Sites.htm
+++ b/Content/Topics/Schedules/Application to Sites.htm
@@ -3,7 +3,7 @@
     <head><title></title>
     </head>
     <body>
-        <h1>Application to sites</h1>
+        <h1>Site Manager: schedule types by site</h1>
         <p>Schedules are applied to sites (stores and distribution centers) to help control ordering behavior. In Site Manager, there are two schedule types by site: a shipping schedule and a receiving schedule. </p>
         <p class="BasicNote">Schedule data is stored in the <span class="Emphasis">tbl_Site.Receiving</span> table. Schedule sets are stored in StockReceiptAlamancID. Shipping schedule sets are stored in StockShipAlmanacID. </p>
         <MadCap:snippetBlock src="../../Resources/Snippets/Schedule Types.flsnp" />
