--- a/Content/Topics/Schedules/Application to Suppliers.htm
+++ b/Content/Topics/Schedules/Application to Suppliers.htm
@@ -3,7 +3,7 @@
     <head><title></title>
     </head>
     <body>
-        <h1>Application to suppliers</h1>
+        <h1>Supplier Manager: schedules types by site</h1>
         <p>Schedules are applied to suppliers to help control ordering and delivery behavior. In the Supplier Manager, there are two schedules types by site: an ordering schedule and a delivery schedule. </p>
         <p>How ordering and receiving schedules are applied to suppliers affect ordering behavior in different ways. Not all suppliers require specific schedule sets, but the schedule sets may be used to restrict how the Replenishment Engine processes order dates  when the desired behavior is to align ordering with logistical constraints. </p>
         <p>The schedule types available to suppliers are:</p>
