--- a/Content/Topics/Schedules/Creating a Monthly Schedule.htm
+++ b/Content/Topics/Schedules/Creating a Monthly Schedule.htm
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Creating a monthly schedule</h1>
@@ -21,7 +19,7 @@
             <li>On the right side of the screen, enter the schedule name and description.</li>
             <li>Choose <span class="Emphasis">Recurring</span> from the <span class="Emphasis">Schedule Type</span> dropdown menu.</li>
             <li>Select <span class="Emphasis">Monthly</span> from the <span class="Emphasis">Occurs</span> dropdown menu in the <span class="Emphasis">Frequency</span> section.</li>
-            <li>Select either the <span class="Emphasis">Day</span> or <span class="Emphasis">The</span> radio buttons and complete the options as required.</li>
+            <li>Choose either the <span class="Emphasis">Day</span> or <span class="Emphasis">The</span> radio buttons and complete the fields as required.</li>
             <li>In the <span class="Emphasis">Duration</span> section, enter the start- and end dates or select <span class="Emphasis">No end date</span> if the schedule’s duration is unknown.</li>
             <li>Click <span class="Emphasis">Save</span>.</li>
         </ol>
