AP content update

--- a/Content/Topics/Assortment Planning/Assortment Plan Defaults tab.htm
+++ b/Content/Topics/Assortment Planning/Assortment Plan Defaults tab.htm
@@ -52,7 +52,7 @@
         <p><span class="Emphasis">Minimum Presentation</span>: Sets the minimum presentation stock in units per site for a given period within the current assortment plan.</p>
         <p class="BasicNote">This setting persists across time for any periods for which <span class="Emphasis">Minimum Presentation</span> has not been set in the <span class="Emphasis">Assortment Plan Defaults By Time</span> tab, with values entered there acting as overrides to this value.</p>
         <p><span class="Emphasis">Seasonality Curve</span>: Sets the default seasonality curve applied to placeholder instances generated within the specified level of the product hierarchy.</p>
-        <p class="BasicNote">Only curves of the Manual or Specified Conditions Using Enhanced Filtering types are available for selection within  Assortment Planning.</p>
+        <MadCap:snippetBlock src="../../Resources/Snippets/Curves Available for Selection in AP.flsnp" />
         <p><span class="Emphasis">Curve Mode</span>: Sets the mode of the seasonality curve being applied to a placeholder:</p>
         <ul>
             <li><span class="Emphasis">Static</span>: The selected curve is applied exactly as it exists at the time of application and the placeholder’s curve will not change if changes are made to the curve, whether manually in the Curves module or through dynamic recalculation. Think of this as making a copy of the applied curve</li>
