--- a/Content/Topics/Assortment Planning/Receipt Plan View.htm
+++ b/Content/Topics/Assortment Planning/Receipt Plan View.htm
@@ -372,7 +372,7 @@ Users can click the <span class="Emphasis">Recalculate Receipts</span> button wh
                 <p class="Example">A period with planned sales of 500 units and a Shrink % of Sales of 2.00% must have an EOP units of at least 10 for this constraint to be satisfied for the period.</p>
             </li>
             <li><span class="Emphasis">Min Stock to Sales</span>: Editable to 2 decimal places where it can be changed. The minimum stock to sales ratio as a constraint for the receipt engine outputs.</li>
-            <li><span class="Emphasis">Target S/T %</span>: Editable, has no calculation effect or relationship.  The user can enter their target sell through value to compare against the calculated S/T %.</li>
+            <li><span class="Emphasis">Target S/T %</span>: Editable, has no calculation effect or relationship.  Users can enter a target sell-through value to compare against a calculated sell-through percentage.</li>
             <li><span class="Emphasis">S/T %</span>: read-only. Percentage (10.1%). Compares the lifetime sales for the item against the lifetime orders.
 
 Calculation: (SPV Sls U / Ttl Orders U).</li>
