--- a/Content/Topics/Assortment Planning/Rollup Metric Definitions.htm
+++ b/Content/Topics/Assortment Planning/Rollup Metric Definitions.htm
@@ -540,7 +540,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Sellthrough</span>
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">  By period sell through percentage.&#160; (Sales Units/BOP Units). This is not a rolling calculation and looks at each period individually.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">  By period sell-through percentage.&#160; (Sales Units/BOP Units). This is not a rolling calculation and looks at each period individually.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Shrink Cost</span>
