--- a/Content/Topics/Ordering Constraints/Constraint Parameters.htm
+++ b/Content/Topics/Ordering Constraints/Constraint Parameters.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Constraint parameter descriptions</h1>
-        <p>Values change as users highlight different constraint sets within the header. When building a new constraint it is easy to think of the constraint as the following template sentence:</p>
+        <p>Values change as users highlight different constraint sets within the header. When building a new constraint it helps to think of the constraint as the following template sentence:</p>
         <p style="text-align: left;"><span style="font-style: italic;">Constrain so that “</span><span style="font-weight: bold;font-style: italic;">Constraint Type”</span><span style="font-style: italic;"> is </span><span style="font-weight: bold;font-style: italic;">“Operator”</span><span style="font-style: italic;"> the value </span><span style="font-weight: bold;font-style: italic;">“Constraint Value”</span>.</p>
         <ul>
             <li><span class="Emphasis">Priority</span> – Constraints are applied in order of priority within context of the constraint set. Priority 1 is applied last and can override lower prioritized constraints.</li>
@@ -15,8 +15,8 @@
         </ul>
         <ul>
             <li><span class="Emphasis">Constraint Value</span> – Numerical value of the constraint.</li>
-            <li><span class="Emphasis">Tolerance Above</span> – Should the system be unable to constrain the value exactly to the correct amount, the tolerance above the value which is considered acceptable. This may be expressed as a percentage, or quantity of units.</li>
-            <li><span class="Emphasis">Tolerance Below</span> – Should the system be unable to constrain the value exactly to the correct amount, the tolerance below the value which is considered acceptable. This may be expressed as a percentage, or quantity of units.</li>
+            <li><span class="Emphasis">Tolerance Above</span> – The acceptable tolerance above the value if the value cannot be constrained exactly to the correct amount. This can be expressed as a percentage or quantity of units.</li>
+            <li><span class="Emphasis">Tolerance Below</span> – The acceptable tolerance below the value if the value cannot be constrained exactly to the correct amount. This can be expressed as a percentage or quantity of units.</li>
             <li><span class="Emphasis">Rounding</span> – Acceptable rounding rules must be selected when the operator is <span class="Emphasis">Equal to Multiple of</span>:<ul><li><span class="Emphasis">Round Up</span></li><li><span class="Emphasis">Round Down</span></li><li><span class="Emphasis">Round to Nearest</span></li></ul></li>
         </ul>
         <p>Additional fields can be added by including groups of items within the selection. </p>
