--- a/Content/Topics/Schedules/Application to Suppliers.htm
+++ b/Content/Topics/Schedules/Application to Suppliers.htm
@@ -3,9 +3,9 @@
     <head><title></title>
     </head>
     <body>
-        <h1>Supplier Manager: schedules types by site</h1>
+        <h1>Supplier Manager: schedule types by site</h1>
         <p>Schedules are applied to suppliers to help control ordering and delivery behavior. In the Supplier Manager, there are two schedules types by site: an ordering schedule and a delivery schedule. </p>
-        <p>How ordering and receiving schedules are applied to suppliers affect ordering behavior in different ways. Not all suppliers require specific schedule sets, but the schedule sets may be used to restrict how the Replenishment Engine processes order dates  when the desired behavior is to align ordering with logistical constraints. </p>
+        <p>How ordering and receiving schedules are applied to suppliers affect ordering behavior in different ways. Not all suppliers require specific schedule sets, but the schedule sets can be used to restrict order dates  when the desired behavior is to align ordering with logistical constraints. </p>
         <p>The schedule types available to suppliers are:</p>
         <ul>
             <li><span class="Emphasis">Ordering Schedule</span>: determines the dates on which an order can be placed with a supplier. Ordering schedules does not control supplier shipping dates.</li>
